--- a/src/login.html
+++ b/src/login.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sl">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Notes app</title>
+	<title>MyPet</title>
 	<link rel="stylesheet" href="main.css" />
 </head>
 <body>
-	<a href="index.html">Home</a>
-	<br><br>
-	<h1 id="title">About, page!</h1>
+	<h1 id="title">Login</h1>
 </body>
 </html>
