--- a/src/login.html
+++ b/src/login.html
@@ -5,9 +5,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MyPet</title>
-	<link rel="stylesheet" href="main.css" />
+	<link rel="stylesheet" href="login.css" />
 </head>
 <body>
-	<h1 id="title">Login</h1>
+    <div id="box">
+        <p id="naslov">MyPet</p>
+        <p class="input_label">E-Mail</p>
+        <input type="text" class="input_box"><br><br>
+        <p class="input_label">Password</p>
+        <input type="password" class="input_box"><br><br>
+        <button id="login">Prijava</button>
+    </div>
+
+    <script src="login.js"></script>
 </body>
 </html>
