Dodan seznam psov

--- a/src/diagnoza/diagnoza.html
+++ b/src/diagnoza/diagnoza.html
@@ -16,7 +16,8 @@
 		<li class="menuitem"><a href="../trening/trening.html">Trening</a></li>
 		<li class="menuitem" style="float:right"><a href="../login/login.html">Odjava</a></li>
 	</ul>
-	<br><br>
-	<h1 id="title">Diagnoza</h1>
+	<div id="main">
+		<h1 id="title">Diagnoza</h1>
+	</div>
 </body>
 </html>
