--- a/src/psi/psi.html
+++ b/src/psi/psi.html
@@ -18,6 +18,40 @@
 	</ul>
 	<br><br>
 
+	
+	<div class="left_menu">
+		<button class="menu_button" id="add_dog">Dodaj</button>
+		<button class="menu_button" id="fetch_dogs">Posodobi</button>
+	</div>
+	
+
+	<div id="dogs_list">
+		<p id="dogs_list_label">Moji Psi</p>
+		<div class="dog">
+			<div class="name_div"><p class="dog_name">Rex</p></div>
+			<div class="labels">
+				<div class="birthday_label_div"><p class="birthday_label">Rojstni datum</p></div>
+				<div class="animalID_label_div"><p class="animalID_label">Animal ID</p></div>
+			</div>
+			<div class="values">
+				<div class="birthday_div"><p class="dog_birthday">14/11/2019</p></div>
+				<div class="animalID_div"><p class="dog_animalID">12342424</p></div>
+			</div>
+		</div>
+		<div class="dog">
+			<div class="name_div"><p class="dog_name">Rex</p></div>
+			<div class="labels">
+				<div class="birthday_label_div"><p class="birthday_label">Rojstni datum</p></div>
+				<div class="animalID_label_div"><p class="animalID_label">Animal ID</p></div>
+			</div>
+			<div class="values">
+				<div class="birthday_div"><p class="dog_birthday">14/11/2019</p></div>
+				<div class="animalID_div"><p class="dog_animalID">12342424</p></div>
+			</div>
+		</div>
+	</div>
+
+	<br/><br/>
 	<button id="notify">Notify</button>
 
 	<script src="psi.js"></script>
