--- a/src/psi/psi.html
+++ b/src/psi/psi.html
@@ -31,22 +31,22 @@
 			<div class="name_div"><p class="dog_name">Rex</p></div>
 			<div class="labels">
 				<div class="birthday_label_div"><p class="birthday_label">Rojstni datum</p></div>
-				<div class="animalID_label_div"><p class="animalID_label">Animal ID</p></div>
+				<div class="ID_label_div"><p class="ID_label">ID</p></div>
 			</div>
 			<div class="values">
 				<div class="birthday_div"><p class="dog_birthday">14/11/2019</p></div>
-				<div class="animalID_div"><p class="dog_animalID">12342424</p></div>
+				<div class="ID_div"><p class="dog_ID">12342424</p></div>
 			</div>
 		</div>
 		<div class="dog">
 			<div class="name_div"><p class="dog_name">Rex</p></div>
 			<div class="labels">
 				<div class="birthday_label_div"><p class="birthday_label">Rojstni datum</p></div>
-				<div class="animalID_label_div"><p class="animalID_label">Animal ID</p></div>
+				<div class="ID_label_div"><p class="ID_label">ID</p></div>
 			</div>
 			<div class="values">
 				<div class="birthday_div"><p class="dog_birthday">14/11/2019</p></div>
-				<div class="animalID_div"><p class="dog_animalID">12342424</p></div>
+				<div class="ID_div"><p class="dog_ID">12342424</p></div>
 			</div>
 		</div>
 	</div>
