--- a/src/diagnoza/diagnoza.html
+++ b/src/diagnoza/diagnoza.html
@@ -17,7 +17,110 @@
 		<li class="menuitem" style="float:right"><a href="../login/login.html">Odjava</a></li>
 	</ul>
 	<div id="main">
-		<h1 id="title">Diagnoza</h1>
+
+		<p id="title">Diagnoza</p>
+		<div id="inputFields">
+			<div id="myDogsDiv">
+				<p id="myDogsLabel">Pes</p>
+				<select id="myDogs">
+					<option class="dog" value="832849489824">Rex</option>
+				</select>
+			</div>
+			<div id="simptomiDiv">
+				<p id="simptomiTitle">Simptomi</p>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" id="bolecineTaca" type="checkbox">
+					<p class="simptomLabel">Bolečine v taci</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" id="otezenaHoja" type="checkbox">
+					<p class="simptomLabel">Otežena hoja</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+				<div class="simptomDiv">
+					<input class="simptomCheckbox" type="checkbox">
+					<p class="simptomLabel">Bolečine v nogi</p>
+				</div>
+			</div>
+			<button id="search">Preveri</button>
+		</div>
+
+		<div id="outputFields">
+			<p id="rezultatiTitle">Bolezni</p>
+			<div id="rezultati">
+				<div class="rezultat" id="rezultat1">
+					<p class="imeBolezni" id="bolezen1">Rak</p>
+					<div class="percentageDiv">
+						<p class="percentage" id="percentage1">98.9%</p>
+					</div>
+				</div>
+				<div class="rezultat">
+					<p class="imeBolezni" id="bolezen2">Zlomljena šapa</p>
+					<div class="percentageDiv">
+						<p class="percentage" id="percentage2">17.2%</p>
+					</div>
+				</div>
+				<div class="rezultat">
+					<p class="imeBolezni" id="bolezen3">Steklina</p>
+					<div class="percentageDiv">
+						<p class="percentage" id="percentage3">0.4%</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
+	<script src="diagnoza.js"></script>
 </body>
 </html>
