--- a/src/dodajPsa/dodajPsa.html
+++ b/src/dodajPsa/dodajPsa.html
@@ -35,7 +35,7 @@
 			</div>
 			<div class="container" id="birthday_container">
 				<p class="label" id="birthday_label">Rojstni datum</p>
-				<input class="value" id="birthday_value" type="text">
+				<input class="value" id="birthday_value" type="date">
 			</div>
 			<div class="container" id="userID_container">
 				<p class="label" id="userID_label">ID uporabnika</p>
