--- a/src/podatkiPsa/podatkiPsa.html
+++ b/src/podatkiPsa/podatkiPsa.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="container" id="birthday_container">
 				<p class="label" id="birthday_label">Rojstni datum</p>
-				<input class="value" id="birthday_value" type="text" readonly>
+				<input class="value" id="birthday_value" type="date" readonly>
 			</div>
 			<div class="container" id="userID_container">
 				<p class="label" id="userID_label">ID uporabnika</p>
