- Login - Register - Bcrypt enkripcija - JWT preverjanje - modulacija (razdelil sheme in routerje) (TO FINISH) - dodeljevanje status kod requestom - Spremenil strukturo petov (NOVA: '_id, name, date_of_birth, user_id, weight') - Posodobil pridobivanje psov glede na uporabnika - Spremenil izgled psov (dodal weight namesto pes id) - Popravljen date format (2023-03-23) - popravil db.oldpets clear na db.pets.clear (?) - implementacija dodajanja psov - dodajanje idja psa z uuid načinom (knjižnica mongo-objectid, objectid() funkcija v preload.js, ni treba naknadno nastavljat idja) - spremenjena struktura dodajanja psov (UI/frontend in backend, vnese se samo ime, rd in težo) - spremenil strukturo strani za urejanje - dodal funkcionalnost urejanja in brisanja psov - Odkomentiral spremenljivke za datum in težo pri diagnozi in treningu - Implementiral dodajanje terminov - Implementiral prikaz terminov glede na user id v dogih (WIP) - prikaz podatkov o terminu

--- a/src/podatkiPsa/podatkiPsa.html
+++ b/src/podatkiPsa/podatkiPsa.html
@@ -30,22 +30,16 @@
 				<p class="label" id="ime_label">Ime</p>
 				<input class="value" id="ime_value" type="text" readonly>
 			</div>
-			<div class="container" id="ID_container">
-				<p class="label" id="ID_label">ID</p>
-				<input class="value" id="ID_value" type="text" readonly>
-			</div>
+	
 			<div class="container" id="birthday_container">
 				<p class="label" id="birthday_label">Rojstni datum</p>
 				<input class="value" id="birthday_value" type="date" readonly>
 			</div>
 			<div class="container" id="userID_container">
-				<p class="label" id="userID_label">ID uporabnika</p>
+				<p class="label" id="userID_label">Teža</p>
 				<input class="value" id="userID_value" type="text" readonly>
 			</div>
-			<div class="container" id="animalID_container">
-				<p class="label" id="animalID_label">ID tipa živali</p>
-				<input class="value" id="animalID_value" type="text" readonly>
-			</div>
+		
 		</div>
 
 	</div>
