--- a/src/dodajPsa/dodajPsa.html
+++ b/src/dodajPsa/dodajPsa.html
@@ -29,22 +29,16 @@
 				<p class="label" id="ime_label">Ime</p>
 				<input class="value" id="ime_value" type="text">
 			</div>
-			<div class="container" id="petID_container">
-				<p class="label" id="petID_label">ID</p>
-				<input class="value" id="petID_value" type="text">
-			</div>
+		
 			<div class="container" id="birthday_container">
 				<p class="label" id="birthday_label">Rojstni datum</p>
 				<input class="value" id="birthday_value" type="date">
 			</div>
 			<div class="container" id="userID_container">
-				<p class="label" id="userID_label">ID uporabnika</p>
+				<p class="label" id="userID_label">Teža</p>
 				<input class="value" id="userID_value" type="text">
 			</div>
-			<div class="container" id="animalID_container">
-				<p class="label" id="animalID_label">ID tipa živali</p>
-				<input class="value" id="animalID_value" type="text">
-			</div>
+			
 		</div>
 
 	</div>
