--- a/src/trening/trening.html
+++ b/src/trening/trening.html
@@ -8,6 +8,10 @@
 	<link rel="stylesheet" href="trening.css" />
 </head>
 <body>
+	<div id="loading-overlay" display="none">
+		<div id="loading-message">Loading...</div>
+	  </div>
+
 	<ul id="menubar">
 		<li id="logo"><a href="../psi/psi.html">MyPet</a></li>
 		<li class="menuitem"><a href="../psi/psi.html">Moji Psi</a></li>
