dodal username in login z usenrame

--- a/src/login/login.html
+++ b/src/login/login.html
@@ -11,7 +11,7 @@
     <div id="box">
         <p id="naslov">MyPet</p>
         <p id="error"></p>
-        <p class="input_label">E-Mail</p>
+        <p class="input_label">Username</p>
         <input id="email" type="text" class="input_box"><br><br>
         <p class="input_label">Password</p>
         <input id="password" type="password" class="input_box"><br><br>
