Dodal email regex, ddoal tooast, fixal diagnozo in trening no conn

--- a/src/register/register.html
+++ b/src/register/register.html
@@ -21,7 +21,10 @@
         <br/>
         <a id="prijava" href="../login/login.html">Prijava</a>
     </div>
+    <div id="toast"></div>
 
     <script type="module" src="register.js"></script>
+
+    
 </body>
 </html>
