Doodajanje ikone, diagnoza/trening placeholder udpate

--- a/src/trening/trening.html
+++ b/src/trening/trening.html
@@ -46,7 +46,7 @@
 			<div id="rezultatDiv">
 				<p id="rezultatTitle">Načrt</p>
 				<div class="outputDiv">
-					<p class="output_value" id="output_value">Class WebSwapCGLLayer is implemented in both /System/Library/ Frameworks /WebKit.framework/Ver sions/A /Frameworks/We bCore.framework/V ersio ns/A/Frameworks /libANGLE-sh ared.dylib (0x228eaafe0) and /Users/n ik/Downloads/Studi j/MAG1/ST/ST_projekt /node_modules/elect ron/dist/Electron.app/Co ntents/Frameworks/Electro n Framework.frame work/Versions/A /Libraries/libGLES v2.dylib (0x1130c1 d08). One of the two will be used. Which one is undefined.</p>
+					<p class="output_value" id="output_value">Kliknite na preveri.</p>
 				</div>
 			</div>
 		</div>
